[tool.poetry]
name = "codonpython"
version = "0.2.1"
description = "This is a first attempt at how our package will work."
authors = ["NHS Digital DIS Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.2.3"
numpy = ">=2.1.3"
scipy = ">=1.14.1"
sqlalchemy = ">=2.0.36"
scikit-learn = ">=1.5.2"
statsmodels = ">=0.14.4"
seaborn = ">=0.13.2"
sphinx = ">=8.1.3"
sphinx-rtd-theme = ">=3.0.1"
flake8 = ">=7.1.1"
m2r = ">=0.3.1"
pytest = ">=8.3.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"